--- a/SampleMvxMapPlugin.Droid/Resources/layout/FirstView.axml
+++ b/SampleMvxMapPlugin.Droid/Resources/layout/FirstView.axml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -9,4 +9,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         class="com.google.android.gms.maps.MapFragment" />
-</LinearLayout>
+  <RelativeLayout
+        android:id="@+id/layout_bottom"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true">
+    <Button
+        android:id="@+id/but_left"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Nær mig"
+        android:layout_alignParentLeft="true" />
+    <Button
+        android:id="@+id/but_right"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="Find rute"
+        android:layout_centerInParent="true"
+        android:layout_toRightOf="@id/but_left"
+        android:layout_alignParentEnd="true" />
+  </RelativeLayout>
+</RelativeLayout>
